@@ -9,6 +9,9 @@
 	  - New category menu option: "Unidentified items"
 	  - 'X' toggles twoweaponing, explore mode is on alt-x resp. #xplore
 
+	* new dungeon features:
+	  - dead trees (from NetHack Brass)
+
 	* vanilla bug fixes:
 	  - C343-198
 
